--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,16 @@
 name: "Plume"
 services:
-    psq_database:
-        image: postgres
-        ports: 
-            - "5432:5432"
-        environment: 
-            - POSTGRES_PASSWORD=postgres
-        volumes: 
-            - postgresql_data:/var/lib/postgresql/data
+    database:
+        image: mariadb
+        ports:
+            - "3306:3306"
+        environment:
+            - MYSQL_USER=${MYSQL_USER}
+            - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+            - MYSQL_DATABASE=${MYSQL_DATABASE}
+            - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+        volumes:
+            - mariadb_data:/var/lib/mysql
 
 volumes:
-    postgresql_data: {}
+    mariadb_data: {}
