Finished rust websocket server, broadcasting every messages it receive

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-actix-web = "4.10.2"
 diesel = { version = "2.2.9", features = ["mysql"] }
+futures-channel = "0.3.31"
+futures-util = "0.3.31"
+tokio = { version = "1.44.2", features = ["full"] }
+tokio-tungstenite = "0.26.2"
